@@ -4,6 +4,7 @@ import gov.cdc.dataprocessing.constant.elr.NEDSSConstant;
 import gov.cdc.dataprocessing.constant.enums.LocalIdClass;
 import gov.cdc.dataprocessing.exception.DataProcessingException;
 import gov.cdc.dataprocessing.model.dto.entity.EntityLocatorParticipationDto;
+import gov.cdc.dataprocessing.repository.nbs.odse.jdbc_template.EntityLocatorJdbcRepository;
 import gov.cdc.dataprocessing.repository.nbs.odse.model.entity.EntityLocatorParticipation;
 import gov.cdc.dataprocessing.repository.nbs.odse.model.locator.PhysicalLocator;
 import gov.cdc.dataprocessing.repository.nbs.odse.model.locator.PostalLocator;
@@ -13,11 +14,10 @@ import gov.cdc.dataprocessing.repository.nbs.odse.repos.locator.PhysicalLocatorR
 import gov.cdc.dataprocessing.repository.nbs.odse.repos.locator.PostalLocatorRepository;
 import gov.cdc.dataprocessing.repository.nbs.odse.repos.locator.TeleLocatorRepository;
 import gov.cdc.dataprocessing.repository.nbs.odse.repos.person.PersonRepository;
+import gov.cdc.dataprocessing.service.implementation.uid_generator.UidPoolManager;
 import gov.cdc.dataprocessing.service.interfaces.entity.IEntityLocatorParticipationService;
-import gov.cdc.dataprocessing.service.interfaces.uid_generator.IOdseIdGeneratorWCacheService;
 import gov.cdc.dataprocessing.utilities.component.jdbc.DataModifierReposJdbc;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -48,30 +48,36 @@ import java.util.stream.Collectors;
 @SuppressWarnings({"java:S125", "java:S3776", "java:S6204", "java:S1141", "java:S1118", "java:S1186", "java:S6809", "java:S6541", "java:S2139", "java:S3740",
         "java:S1149", "java:S112", "java:S107", "java:S1195", "java:S1135", "java:S6201", "java:S1192", "java:S135", "java:S117"})
 public class EntityLocatorParticipationService implements IEntityLocatorParticipationService {
-    private static final Logger logger = LoggerFactory.getLogger(EntityLocatorParticipationService.class); // NOSONAR
     @Value("${service.timezone}")
     private String tz = "UTC";
 
+    private final UidPoolManager uidPoolManager;
+
     private final PersonRepository personRepository;
-    private final EntityLocatorParticipationRepository entityLocatorParticipationRepository;
     private final TeleLocatorRepository teleLocatorRepository;
     private final PostalLocatorRepository postalLocatorRepository;
     private final PhysicalLocatorRepository physicalLocatorRepository;
-    private final IOdseIdGeneratorWCacheService odseIdGeneratorService;
     private final DataModifierReposJdbc dataModifierReposJdbc;
-    public EntityLocatorParticipationService(PersonRepository personRepository,
+
+    private final EntityLocatorJdbcRepository entityLocatorJdbcRepository;
+    private final EntityLocatorParticipationRepository entityLocatorParticipationRepository;
+
+
+    public EntityLocatorParticipationService(UidPoolManager uidPoolManager, PersonRepository personRepository,
                                              EntityLocatorParticipationRepository entityLocatorParticipationRepository,
                                              TeleLocatorRepository teleLocatorRepository,
                                              PostalLocatorRepository postalLocatorRepository,
                                              PhysicalLocatorRepository physicalLocatorRepository,
-                                             IOdseIdGeneratorWCacheService odseIdGeneratorService, DataModifierReposJdbc dataModifierReposJdbc) {
+                                             DataModifierReposJdbc dataModifierReposJdbc,
+                                             EntityLocatorJdbcRepository entityLocatorJdbcRepository) {
+        this.uidPoolManager = uidPoolManager;
         this.personRepository = personRepository;
         this.entityLocatorParticipationRepository = entityLocatorParticipationRepository;
         this.teleLocatorRepository = teleLocatorRepository;
         this.postalLocatorRepository = postalLocatorRepository;
         this.physicalLocatorRepository = physicalLocatorRepository;
-        this.odseIdGeneratorService = odseIdGeneratorService;
         this.dataModifierReposJdbc = dataModifierReposJdbc;
+        this.entityLocatorJdbcRepository = entityLocatorJdbcRepository;
     }
 
     @SuppressWarnings({"java:S3776", "java:S125"})
@@ -87,13 +93,11 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
             if (personRes.isPresent()) {
                 parentUid = personRes.get().get(0).getPersonParentUid();
             }
-//            List<EntityLocatorParticipation> mprEntityHomeCheck = new ArrayList<EntityLocatorParticipation>();
             var postalRevision = postalLocatorRepository.findByPostalLocatorUids(deletePostal.stream().map(EntityLocatorParticipationDto::getLocatorUid).toList());
             if (parentUid != null && postalRevision.isPresent()) {
-                var entityMprEntityRes = entityLocatorParticipationRepository.findByParentUid(parentUid);
+                var entityMprEntityRes = entityLocatorJdbcRepository.findByEntityUid(parentUid);
                 var entityMprRes = entityLocatorParticipationRepository.findLocatorUidsByEntityUid(parentUid);
-                if (entityMprRes.isPresent() && entityMprEntityRes.isPresent()) {
-//                    mprEntityHomeCheck = entityMprEntityRes.get().stream().filter(x -> x.getCd().equalsIgnoreCase("H")).toList();
+                if (entityMprRes.isPresent()) {
                     var postalMpr = postalLocatorRepository.findByPostalLocatorUids(entityMprRes.get());
                     if (postalMpr.isPresent()) {
                         for(var revision : postalRevision.get()) {
@@ -127,7 +131,7 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
                             comparingString.append(mpr.getStreetAddr2());
                             comparingString.append(mpr.getZipCd());
 
-                            var birCheck = entityMprEntityRes.get().stream().filter(x -> Objects.equals(x.getLocatorUid(), mpr.getPostalLocatorUid())
+                            var birCheck = entityMprEntityRes.stream().filter(x -> Objects.equals(x.getLocatorUid(), mpr.getPostalLocatorUid())
                             && x.getUseCd().equalsIgnoreCase("BIR")).toList();
                             // Comparing String of MPR matched with Incoming Revision Then Do Delete
                             if (comparingStrList.contains(comparingString.toString().toUpperCase()) && !birCheck.isEmpty()) {
@@ -170,21 +174,20 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
             physicalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
                             .equalsIgnoreCase(NEDSSConstant.PHYSICAL))
                     .sorted(Comparator.comparing(EntityLocatorParticipation::getRecordStatusTime).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
             postalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
                             .equalsIgnoreCase(NEDSSConstant.POSTAL))
                     .sorted(Comparator.comparing(EntityLocatorParticipation::getRecordStatusTime).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
             teleLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
                             .equalsIgnoreCase(NEDSSConstant.TELE))
                     .sorted(Comparator.comparing(EntityLocatorParticipation::getRecordStatusTime).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
             // This remove to be deleted entity from the Participation
             deleteEntityLocatorParticipation(locatorCollection, patientUid);
             StringBuilder comparingString = new StringBuilder();
             for (EntityLocatorParticipationDto entityLocatorParticipationDto : personList) {
-
-                var localUid = odseIdGeneratorService.getValidLocalUid(LocalIdClass.PERSON, true);
+                var localUid = uidPoolManager.getNextUid(LocalIdClass.PERSON,true);
                 boolean newLocator = true;
                 if (entityLocatorParticipationDto.getClassCd().equals(NEDSSConstant.PHYSICAL) && entityLocatorParticipationDto.getThePhysicalLocatorDto() != null)
                 {
@@ -387,23 +390,22 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
         ArrayList<EntityLocatorParticipationDto>  personList = (ArrayList<EntityLocatorParticipationDto> ) locatorCollection;
         for (EntityLocatorParticipationDto entityLocatorParticipationDto : personList) {
             boolean inserted = false;
-            var localUid = odseIdGeneratorService.getValidLocalUid(LocalIdClass.PERSON, true);
+            var localUid = uidPoolManager.getNextUid(LocalIdClass.PERSON,true);
             if (entityLocatorParticipationDto.getClassCd().equals(NEDSSConstant.PHYSICAL) && entityLocatorParticipationDto.getThePhysicalLocatorDto() != null) {
                 entityLocatorParticipationDto.getThePhysicalLocatorDto().setPhysicalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                physicalLocatorRepository.save(new PhysicalLocator(entityLocatorParticipationDto.getThePhysicalLocatorDto()));
+                entityLocatorJdbcRepository.createPhysicalLocator(new PhysicalLocator(entityLocatorParticipationDto.getThePhysicalLocatorDto()));
                 inserted = true;
             } else if (entityLocatorParticipationDto.getClassCd().equals(NEDSSConstant.POSTAL)
                     && entityLocatorParticipationDto.getThePostalLocatorDto() != null
-//                        && entityLocatorParticipationDto.getThePostalLocatorDto().getStreetAddr1() != null
             ) {
                 entityLocatorParticipationDto.getThePostalLocatorDto().setPostalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                postalLocatorRepository.save(new PostalLocator(entityLocatorParticipationDto.getThePostalLocatorDto()));
+                entityLocatorJdbcRepository.createPostalLocator(new PostalLocator(entityLocatorParticipationDto.getThePostalLocatorDto()));
                 inserted = true;
             } else if (entityLocatorParticipationDto.getClassCd().equals(NEDSSConstant.TELE)
                     && entityLocatorParticipationDto.getTheTeleLocatorDto() != null
             && entityLocatorParticipationDto.getTheTeleLocatorDto().getPhoneNbrTxt() != null) {
                 entityLocatorParticipationDto.getTheTeleLocatorDto().setTeleLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                teleLocatorRepository.save(new TeleLocator(entityLocatorParticipationDto.getTheTeleLocatorDto()));
+                entityLocatorJdbcRepository.createTeleLocator(new TeleLocator(entityLocatorParticipationDto.getTheTeleLocatorDto()));
                 inserted = true;
             }
 
@@ -414,7 +416,7 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
                 if (entityLocatorParticipationDto.getVersionCtrlNbr() == null) {
                     entityLocatorParticipationDto.setVersionCtrlNbr(1);
                 }
-                entityLocatorParticipationRepository.save(new EntityLocatorParticipation(entityLocatorParticipationDto, tz));
+                entityLocatorJdbcRepository.createEntityLocatorParticipation(new EntityLocatorParticipation(entityLocatorParticipationDto, tz));
             }
 
         }
@@ -422,7 +424,7 @@ public class EntityLocatorParticipationService implements IEntityLocatorParticip
 
 
     public List<EntityLocatorParticipation> findEntityLocatorById(Long uid) {
-       var result = entityLocatorParticipationRepository.findByParentUid(uid);
-        return result.orElseGet(ArrayList::new);
+       var result = entityLocatorJdbcRepository.findEntityLocatorParticipations(uid);
+        return Objects.requireNonNullElse(result, Collections.emptyList());
     }
 }
